etc/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment 
metadata:
  name: pixiegateway-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pixiegateway
    spec:
      containers:
        - name: pixiegateway
          image: dtaieb/pixiegateway-python35
          imagePullPolicy: Always
